testdata/baselines/reference/compiler/importUrl.errors.txt
/src/index.ts(1,8): error TS2307: Cannot find module 'https://deno.land/std@0.208.0/path/mod.ts' or its corresponding type declarations.


==== /src/index.ts (1 errors) ====
    import "https://deno.land/std@0.208.0/path/mod.ts"
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'https://deno.land/std@0.208.0/path/mod.ts' or its corresponding type declarations.
    